dec - fixed audio path

--- a/blocks 2.0/html/index.html
+++ b/blocks 2.0/html/index.html
@@ -122,7 +122,7 @@
 	var clankSnd = 14;
 	var iceHitSnd = 15;
 	
-	var soundFile = (piServer ? assets : 'https://github.com/dcdesigns/blocks-2.0/tree/master/blocks 2.0/assets/') + 'audio/gameSounds.mp3';
+	var soundFile = assets + 'audio/gameSounds.mp3';
 	var soundOrder = [
 		[trampSnd, 1],
 		[grassSnd, .5],
