dec - sped up a little, (timers as well), added mail feature

--- a/blocks 2.0/html/index.html
+++ b/blocks 2.0/html/index.html
@@ -114,13 +114,14 @@
 	var fallSnd = 6;
 	var winSnd = 7;
 	var portalSnd = 8;
-	var winTheme = 9;
-	var gearSnd = 10
-	var laserSnd = 11;
-	var onSnd = 12;
-	var offSnd = 13;
-	var clankSnd = 14;
-	var iceHitSnd = 15;
+	var nothingSnd = 9;
+	var winTheme = 10;
+	var gearSnd = 11;
+	var laserSnd = 12;
+	var onSnd = 13;
+	var offSnd = 14;
+	var clankSnd = 15;
+	var iceHitSnd = 16;
 	
 	var soundFile = assets + 'audio/gameSounds.mp3';
 	var soundOrder = [
@@ -133,7 +134,8 @@
 		[portalSnd, 1], 
 		[winSnd, 1],
 		[iceSnd, 11.5],
-		[winTheme, 4],
+		[nothingSnd, .8],
+		[winTheme, 3.2],
 		[gearSnd, .5],
 		[laserSnd, 2],
 		[onSnd, 1],
