dec - turned down timer sound a bit

--- a/blocks 2.0/html/index.html
+++ b/blocks 2.0/html/index.html
@@ -134,7 +134,7 @@
 		[portalSnd, 1], 
 		[winSnd, 1],
 		[iceSnd, 11.5],
-		[nothingSnd, .8],
+		[nothingSnd, 0.8],
 		[winTheme, 3.2],
 		[gearSnd, .5],
 		[laserSnd, 2],
