dec - added simplified squares image for quicker drawing of scaled levels

--- a/blocks 2.0/html/index.html
+++ b/blocks 2.0/html/index.html
@@ -101,11 +101,12 @@
 	const Pi_2 = Math.PI/2;
 	const Pi3_2 = Pi_2 * 3;
 
-	var colorsImg, butImg, squareImg, playerImg, numbersImg, oceanImg;
+	var colorsImg, butImg, squareImg, squareQuickImg, playerImg, numbersImg;
 	var images =  [
 		[assets + 'pics/colors.svg', "colorsImg"],
 		[assets + 'pics/buttons.svg', "butImg"], 
 		[assets + 'pics/squares.svg', "squareImg"],
+		[assets + 'pics/squaresQuick.svg', "squareQuickImg"],
 		[assets + 'pics/player.svg', "playerImg"],
 		[assets + 'pics/numbers.svg', "numbersImg"],
 		//[assets + 'pics/ocean.jpg', "oceanImg"]
